src/objects/Agency_Applied_Change_code__c.object
<CustomObject>
    <fields>
        <fullName>AIMS_ID__c</fullName>
        <description>Used as unique identified for change codes coming from AIMS. It&apos;s concatenation of AGT REF, CHANGE CODE, DATETIME when CC was raised. Values coming from the query, no login in SFDC</description>
        <externalId>true</externalId>
        <label>AIMS ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIMS_Updated_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who created this change code in AIMS</description>
        <inlineHelpText>The user who created this change code in AIMS</inlineHelpText>
        <label>AIMS Updated by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agencies_Applied_Change_codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountNewStatus__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cash basis/no commission</fullName>
                </value>
                <value>
                    <fullName>Cash basis/with commission</fullName>
                </value>
                <value>
                    <fullName>Changes processed</fullName>
                </value>
                <value>
                    <fullName>Listed</fullName>
                </value>
                <value>
                    <fullName>New application pending</fullName>
                </value>
                <value>
                    <fullName>No longer a customer</fullName>
                </value>
                <value>
                    <fullName>Not accreditated</fullName>
                </value>
                <value>
                    <fullName>Not in operation</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Under review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountPreviousStatus__c</fullName>
        <label>AccountPreviousStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cash basis/no commission</fullName>
                </value>
                <value>
                    <fullName>Cash basis/with commission</fullName>
                </value>
                <value>
                    <fullName>Changes processed</fullName>
                </value>
                <value>
                    <fullName>Listed</fullName>
                </value>
                <value>
                    <fullName>New application pending</fullName>
                </value>
                <value>
                    <fullName>No longer a customer</fullName>
                </value>
                <value>
                    <fullName>Not accreditated</fullName>
                </value>
                <value>
                    <fullName>Not in operation</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Under review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agencies Applied Change codes</relationshipLabel>
        <relationshipName>Agencies_Applied_Change_codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if this code is Active. Agency can only have one Active code in same time.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Agency where this code is applied to</inlineHelpText>
        <label>Agency (AMS)</label>
        <referenceTo>AMS_Agency__c</referenceTo>
        <relationshipLabel>Agencies Applied Change codes</relationshipLabel>
        <relationshipName>Agencies_Applied_Change_codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Configuration__c</fullName>
        <label>Applied Configuration</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulletin_Information__c</fullName>
        <label>Bulletin Information</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Code__c</fullName>
        <label>Change Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFN</fullName>
                </value>
                <value>
                    <fullName>BSF</fullName>
                </value>
                <value>
                    <fullName>BSP</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                </value>
                <value>
                    <fullName>CCA</fullName>
                </value>
                <value>
                    <fullName>CCF</fullName>
                </value>
                <value>
                    <fullName>CCR</fullName>
                </value>
                <value>
                    <fullName>CHC</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CHG</fullName>
                </value>
                <value>
                    <fullName>CHI</fullName>
                </value>
                <value>
                    <fullName>CHJ</fullName>
                </value>
                <value>
                    <fullName>CHL</fullName>
                </value>
                <value>
                    <fullName>CHM</fullName>
                </value>
                <value>
                    <fullName>CHN</fullName>
                </value>
                <value>
                    <fullName>CHO</fullName>
                </value>
                <value>
                    <fullName>CHS</fullName>
                </value>
                <value>
                    <fullName>CHV</fullName>
                </value>
                <value>
                    <fullName>CLF</fullName>
                </value>
                <value>
                    <fullName>CLI</fullName>
                </value>
                <value>
                    <fullName>CLO</fullName>
                </value>
                <value>
                    <fullName>CLR</fullName>
                </value>
                <value>
                    <fullName>CMF</fullName>
                </value>
                <value>
                    <fullName>CNF</fullName>
                </value>
                <value>
                    <fullName>COR</fullName>
                </value>
                <value>
                    <fullName>CSF</fullName>
                </value>
                <value>
                    <fullName>CWD</fullName>
                </value>
                <value>
                    <fullName>DEF</fullName>
                </value>
                <value>
                    <fullName>DFE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_effective_as_of__c</fullName>
        <formula>OSCAR__r.Change_effective_as_of__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change effective as of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatedDate_User__c</fullName>
        <label>HUB Effective Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_To_Show__c</fullName>
        <formula>BLANKVALUE( Date_time_of_change__c ,  CreatedDate )</formula>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Date_eBulletin__c</fullName>
        <formula>IF( 
    OR( OSCAR__c == null,
        AND( OSCAR__c != null, 
            OR( ISPICKVAL(Change_Code__c, &apos;CAD&apos;), 
                ISPICKVAL(Change_Code__c, &apos;COR&apos;), 
                ISPICKVAL(Change_Code__c, &apos;CTA&apos;), 
                ISPICKVAL(Change_Code__c, &apos;CWD&apos;), 
                ISPICKVAL(Change_Code__c, &apos;DIS&apos;), 
                ISPICKVAL(Change_Code__c, &apos;NEW&apos;), 
                ISPICKVAL(Change_Code__c, &apos;NWD&apos;), 
                ISPICKVAL(Change_Code__c, &apos;REC&apos;)
            )
        )
    ), 
    DATEVALUE( Created_Date_To_Show__c),
    OSCAR__r.Change_effective_as_of__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DEF_Non_Payment2__c</fullName>
        <formula>IF(
AND(
 OR(TEXT(Change_Code__c) =&apos;DEF&apos;, TEXT(Change_Code__c) =&apos;DFE&apos;),
 OR(TEXT(Reason_Description__c) = &apos;DEFAULT - IMM. REMITTANCE&apos;,
    TEXT(Reason_Description__c) = &apos;DEFAULT - OVERDUE REMITTANCE&apos;,
    TEXT(Reason_Description__c) = &apos;DEFAULT MONIES DUE&apos;,
    TEXT(Reason_Description__c) = &apos;DEFAULT NON SETTLEMENT&apos;,
    TEXT(Reason_Description__c) = &apos;DEFAULT NON-SETTLEMENT&apos;,
    TEXT(Reason_Description__c) = &apos;DEFAULT-MONIES DUE&apos;,
    TEXT(Reason_Description__c) = &apos;DEFAULT-OVERDUE REMITTANCE&apos;,
    TEXT(Reason_Description__c) = &apos;NON-PAYMENT ANNUAL FEE&apos;,
    TEXT(Reason_Description__c) = &apos;DEFAULT-NON PAYMENT&apos;,
    TEXT(Reason_Description__c) = &apos;CROSS DEFAULT ACTION&apos;
    )
)
,true
,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEF Non-Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DEF_Non_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DEF Non-Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateTime_GMT__c</fullName>
        <label>DateTime GMT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Memo_Sent__c</fullName>
        <label>Date Memo Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_time_of_change__c</fullName>
        <label>Date-time of change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>for irregularities. Identifies end of billing period</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Grace_Period_Date__c</fullName>
        <label>End of Grace Period Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Security__c</fullName>
        <label>Financial Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_Integration__c</fullName>
        <formula>IF( ISNULL(Account__r.Last_Integration_Date__c),
    true,
    IF( Created_Date_To_Show__c &gt; Account__r.Last_Integration_Date__c,
        true,
        false
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>For Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forms_of_Payment__c</fullName>
        <description>FOPs to show on eBulletin</description>
        <inlineHelpText>FOPs to show on eBulletin</inlineHelpText>
        <label>Forms of Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_Code_Top_Parent__c</fullName>
        <formula>IF(Account__r.Top_Parent__c &lt;&gt; null , Account__r.Top_Parent__r.IATACode__c,Account__r.IATACode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IATA Code Top Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_Code__c</fullName>
        <description>Show the IATA Code from the related Account</description>
        <formula>Account__r.IATACode__c</formula>
        <inlineHelpText>Show the IATA Code from the related Account</inlineHelpText>
        <label>IATA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IEPPayload__c</fullName>
        <formula>IF(OR(Account__r.ANG_IEP_Status_FF__c = &apos;No IEP Account&apos;, ISBLANK(Account__r.ANG_IEP_Status_FF__c)) , null, 
IF(AND(ISPICKVAL(Change_Code__c,&apos;IEP&apos;),OR(ISPICKVAL(Account__r.Location_Type__c,&apos;HO&apos;),ISPICKVAL(Account__r.Location_Type__c,&apos;AO&apos;),ISPICKVAL(Account__r.Location_Type__c,&apos;HE&apos;))),Account__r.IATACode__c,IF(AND(ISPICKVAL(Change_Code__c,&apos;FIN&apos;),NOT(OR(ISPICKVAL(Account__r.Location_Type__c,&apos;HO&apos;),ISPICKVAL(Account__r.Location_Type__c,&apos;AO&apos;),ISPICKVAL(Account__r.Location_Type__c,&apos;HE&apos;)))),Account__r.IATACode__c,IF(NOT(OR(ISPICKVAL(Change_Code__c,&apos;FIN&apos;),ISPICKVAL(Change_Code__c , &apos;IEP&apos;))),Account__r.IATACode__c,null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IEPPayload</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRR_Acumulated_irregularities__c</fullName>
        <formula>Account__r.Accumulated_Irregularities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IRR: Accumulated irregularities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IRR_Expiration_Date__c</fullName>
        <formula>DATETIMEVALUE(
  TEXT(YEAR(NULLVALUE(Effective_Date__c, DATEVALUE(CreatedDate)) )+1)+ &quot;-&quot; +
  IF(
    AND(MONTH(NULLVALUE(Effective_Date__c, DATEVALUE(CreatedDate))) = 2,DAY( NULLVALUE(Effective_Date__c, DATEVALUE(CreatedDate))) = 29)
    ,&quot;3-1&quot;
    ,TEXT(MONTH(NULLVALUE(Effective_Date__c, DATEVALUE(CreatedDate)))) + &quot;-&quot; + TEXT(DAY(NULLVALUE(Effective_Date__c, DATEVALUE(CreatedDate))))
  ) + &quot; 01:01:00&quot;
)</formula>
        <label>IRR Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IRR_Period__c</fullName>
        <formula>SIDRA_Case__r.Remittance_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IRR Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRR_Reason__c</fullName>
        <formula>TEXT(SIDRA_Case__r.IRR_Withdrawal_Reason__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IRR Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_RecId__c</fullName>
        <description>Value for RecId on the Integration process with SAP PI, 3 possible values: A (Addition), C (Change) and D (Termination)</description>
        <label>Integration RecId</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Irregularities_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, irregularities points are not summed in the account. It expires 12 months after the Effective_Date__c</description>
        <label>Irregularities_Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Irregularities_Points__c</fullName>
        <description>Amount of points deducted (A) or Withdrawn (W) or D</description>
        <label>Irregularities Points</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Irregularity_Sequence__c</fullName>
        <label>Irregularity Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Irregularity_Type_Description__c</fullName>
        <formula>IF(ISBLANK(TEXT(Irregularity_Type__c) ), &quot;&quot;,
      CASE( TEXT(Irregularity_Type__c) ,
        &quot;1PT&quot;,&quot;CARGO NON COMPLIANCE&quot;,
        &quot;2PT&quot;,&quot;NON-COMPLIANCE TO CRITERIA&quot;,
        &quot;FC1&quot;,&quot;NON SUBMIS. DOCS-FIN. RVW&quot;,
        &quot;FC2&quot;,&quot;NON SUBMIS. DOCS-FIN. RVW&quot;,
        &quot;NPA&quot;,&quot;NON-PAYMENT OF ANNUAL FEE&quot;,
        &quot;OV1&quot;,&quot;OVERDUE REMITTANCE&quot;,
        &quot;OV2&quot;,&quot;OVERDUE REMITTANCE&quot;,
        &quot;SC1&quot;,&quot;INCOMPLETE DOCS-FIN. RVW&quot;,
        &quot;SC2&quot;,&quot;INCOMPLETE DOCS-FIN. RVW&quot;,
        &quot;WD1&quot;,&quot;WITHDRAWN&quot;,
        &quot;WD2&quot;,&quot;WITHDRAWN&quot;,
      &quot;&quot;)
    )</formula>
        <label>Irregularity Type Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Irregularity_Type__c</fullName>
        <label>Irregularity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1PT</fullName>
                </value>
                <value>
                    <fullName>2PT</fullName>
                </value>
                <value>
                    <fullName>FC1</fullName>
                </value>
                <value>
                    <fullName>FC2</fullName>
                </value>
                <value>
                    <fullName>NPA</fullName>
                </value>
                <value>
                    <fullName>OV1</fullName>
                </value>
                <value>
                    <fullName>OV2</fullName>
                </value>
                <value>
                    <fullName>SC1</fullName>
                </value>
                <value>
                    <fullName>SC2</fullName>
                </value>
                <value>
                    <fullName>WD1</fullName>
                </value>
                <value>
                    <fullName>WD2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OSCAR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>In Case this Code has been applied during a Accreditaiton Request</inlineHelpText>
        <label>OSCAR</label>
        <referenceTo>AMS_OSCAR__c</referenceTo>
        <relationshipLabel>Agencies Applied Change codes</relationshipLabel>
        <relationshipName>Agencies_Applied_Change_codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>A = ADD, W = WITHDRAWN, D = ??</description>
        <inlineHelpText>A = Add Irregularity. W = Withdraw Irregularity</inlineHelpText>
        <label>Operation</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount__c</fullName>
        <description>Value to be displayed at Outstanding Amount column on eBulletin report</description>
        <inlineHelpText>Value to be displayed at Outstanding Amount column on eBulletin report</inlineHelpText>
        <label>Outstanding Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousReason__c</fullName>
        <label>PreviousReason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_on_EBulletin__c</fullName>
        <formula>To_Publish_in_e_Bulletin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Published on EBulletin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>43</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>51</fullName>
                </value>
                <value>
                    <fullName>52</fullName>
                </value>
                <value>
                    <fullName>53</fullName>
                </value>
                <value>
                    <fullName>54</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>61</fullName>
                </value>
                <value>
                    <fullName>62</fullName>
                </value>
                <value>
                    <fullName>63</fullName>
                </value>
                <value>
                    <fullName>64</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>66</fullName>
                </value>
                <value>
                    <fullName>67</fullName>
                </value>
                <value>
                    <fullName>71</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
                <value>
                    <fullName>81</fullName>
                </value>
                <value>
                    <fullName>91</fullName>
                </value>
                <value>
                    <fullName>93</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Description__c</fullName>
        <label>Reason Description</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AccountNewStatus__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACCREDITED - MEETS CRITERIA</fullName>
                </value>
                <value>
                    <fullName>ACCREDITED-MEET-STANDARDS</fullName>
                </value>
                <value>
                    <fullName>ADMINISTRATIVE OFFICES</fullName>
                </value>
                <value>
                    <fullName>APPLICATION DISAPPROVED</fullName>
                </value>
                <value>
                    <fullName>APPLICATION WITHDRAWN</fullName>
                </value>
                <value>
                    <fullName>BANKRUPTCY/LIQUIDATION</fullName>
                </value>
                <value>
                    <fullName>BSP PARTICIPATIION - REVIEW IN PROGRESS</fullName>
                </value>
                <value>
                    <fullName>BSP PARTICIPATION - REVIEW IN PROGRESS</fullName>
                </value>
                <value>
                    <fullName>BY AGENCY ADMINISTRATOR</fullName>
                </value>
                <value>
                    <fullName>BY COMMISSIONER</fullName>
                </value>
                <value>
                    <fullName>CASS PARTICIPATION - REVIEW IN PROGRESS</fullName>
                </value>
                <value>
                    <fullName>CHANGE IN PROCESS</fullName>
                </value>
                <value>
                    <fullName>CODE ASSIGNED</fullName>
                </value>
                <value>
                    <fullName>CODE ASSIGNMENT ONLY</fullName>
                </value>
                <value>
                    <fullName>CROSS DEFAULT ACTION</fullName>
                </value>
                <value>
                    <fullName>DEFAULT ACCUM. IRR. - NON COMPLIANCE</fullName>
                </value>
                <value>
                    <fullName>DEFAULT ACCUM. IRR. - PAYMENT RELATED</fullName>
                </value>
                <value>
                    <fullName>DEFAULT - NON PAYMENT</fullName>
                </value>
                <value>
                    <fullName>DEFAULT NON-SETTLEMENT</fullName>
                </value>
                <value>
                    <fullName>DEFAULT - UNDER REPAYMENT PLAN</fullName>
                </value>
                <value>
                    <fullName>NEW APPLICATION</fullName>
                </value>
                <value>
                    <fullName>NON COMPLIANCE TO ACCREDITATION CRITERIA</fullName>
                </value>
                <value>
                    <fullName>NON COMPLIANCE TO CRITERIA</fullName>
                </value>
                <value>
                    <fullName>NON COMPLIANCE TO FINANCIAL CRITERIA</fullName>
                </value>
                <value>
                    <fullName>NOTICE OF TERMINATION DUE TO NON PAYMENT</fullName>
                </value>
                <value>
                    <fullName>PREJUDICED COLLECTION OF FUNDS</fullName>
                </value>
                <value>
                    <fullName>RELINQUISHMENT IN PROCESS</fullName>
                </value>
                <value>
                    <fullName>VOLUNTARY RELINQUISHMENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Irregularity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for W IRR: a previous A IRR should be selected</description>
        <label>Related Irregularity</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Select an existing A Irregularities for the same agency</errorMessage>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agency_Applied_Change_code__c</referenceTo>
        <relationshipLabel>Agencies Applied Change codes</relationshipLabel>
        <relationshipName>Agencies_Applied_Change_codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Step__c</fullName>
        <label>Request Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIDRA_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <errorMessage>You can only select SIDRA, SIDRA Lite or SAAM cases, make sure the selected case has the correct record type</errorMessage>
            <filterItems>
                <field>Case.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>SIDRA</value>
            </filterItems>
            <filterItems>
                <field>Case.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>SIDRA_Lite</value>
            </filterItems>
            <filterItems>
                <field>Case.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ProcessEuropeSCE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Agencies Applied Change codes</relationshipLabel>
        <relationshipName>Agencies_Applied_Change_codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_to_external_system__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sent to external system</description>
        <label>Sent to external system</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Agency_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the change code should or should not be picked by the DPC integration</description>
        <label>Skip Agency Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Identify the source of the IRR (Ext system)</description>
        <label>Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>for irregularities. Identifies start of billing period</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Publish_in_e_Bulletin__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Uncheck if the change code should not appear in the e-bulletin</inlineHelpText>
        <label>To Publish in e-Bulletin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_AIMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for Analyst to check if the Minor Change has been carried out to AIMS</description>
        <inlineHelpText>Flag for Analyst to check if the Minor Change has been carried out to AIMS</inlineHelpText>
        <label>Updated AIMS</label>
        <type>Checkbox</type>
    </fields>
    <label>Agency Applied Change code</label>
    <listViews>
        <fullName>RVW</fullName>
        <columns>NAME</columns>
        <columns>Reason_Code__c</columns>
        <columns>Reason_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Code__c</field>
            <operation>equals</operation>
            <value>RVW</value>
        </filters>
        <filters>
            <field>Reason_Code__c</field>
            <operation>equals</operation>
            <value>61</value>
        </filters>
        <filters>
            <field>Reason_Description__c</field>
            <operation>equals</operation>
            <value>NON COMPLIANCE TO FINANCIAL CRITERIA</value>
        </filters>
        <label>RVW</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AACC-{000000}</displayFormat>
        <label>Change code details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agencies Applied Change codes</pluralLabel>
    <recordTypes>
        <fullName>Irregularities</fullName>
        <active>true</active>
        <description>Applied for irregularities only</description>
        <label>Irregularities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Used for non-irregularities</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ANG_Block_Irregularity_Change_Codes</fullName>
        <active>true</active>
        <description>blocks the creation of irregularity change codes on newgen agencies</description>
        <errorConditionFormula>AND( RecordType.Name = &apos;Irregularities&apos;,  Account__r.ANG_IsNewGenAgency__c,  ISNEW()  )</errorConditionFormula>
        <errorMessage>Irregularity change codes cannot be created on newgen agencies.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Publishing_e_Bulletin_PASS</fullName>
        <active>true</active>
        <description>Prevent the user to change the &quot;To Publish in e-Bulletin&quot; checkbox to TRUE if the Account is related to a PASS process.</description>
        <errorConditionFormula>AND(ISPICKVAL(Account__r.Sector__c,&apos;Cargo Agent&apos;),ISPICKVAL(Account__r.Category__c,&apos;Postal Service&apos;),To_Publish_in_e_Bulletin__c =TRUE)</errorConditionFormula>
        <errorDisplayField>To_Publish_in_e_Bulletin__c</errorDisplayField>
        <errorMessage>This checkbox cannot be changed if the Account is related to a PASS process</errorMessage>
    </validationRules>
</CustomObject>